# causal-perception-implementation

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  requirements.txt
.cla-signatures/v1/: cla.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  dep-scan.yml  license-check.yml  release.yml
data/: README.md
src/: __init__.py  data_prep.py  fairness.py  perception.py  plot_structural_combined.py  run_bootstrap_cis_all.py  run_causal_dp_sweep.py  run_fair_decisions.py  run_parametrical.py  run_structural_age.py  run_structural_nonlinear.py
tests/: __init__.py  conftest.py  test_data_prep.py  test_distances.py  test_fairness.py  test_linear_anm.py  test_perception.py
