# Copyright (c) 2026 José M. Álvarez
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-perception-implementation"
version = "0.1.0"
description = "Research code for causal-perception experiments: comparing competing structural causal models via interventional and counterfactual distributions on the German Credit dataset"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Santander AI Lab", email = "opensource@gruposantander.com"},
]
keywords = [
    "causal-inference",
    "structural-causal-models",
    "counterfactual-fairness",
    "causal-fairness",
    "algorithmic-fairness",
    "responsible-ai",
    "trustworthy-ai",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "coverage>=7.0",
]

[project.urls]
Homepage = "https://github.com/SantanderAI/causal-perception-implementation"
Repository = "https://github.com/SantanderAI/causal-perception-implementation"
Issues = "https://github.com/SantanderAI/causal-perception-implementation/issues"
Changelog = "https://github.com/SantanderAI/causal-perception-implementation/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Research code with domain-specific variable names (A, C, S1, Y, do, W2, ...):
# enforce real errors, pyflakes and import sorting, but do not impose
# pep8-naming (N) / simplify (SIM) / bugbear (B) on the paper code.
select = ["E", "F", "W", "I"]
# Line length is managed by black; ruff should not flag long comments/strings.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
# Experiment entrypoints and the plotting module are thin CLI wrappers around
# the tested engine; they require matplotlib and write figures/CSVs to disk.
omit = [
    "src/run_*.py",
    "src/plot_*.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
